--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-  "name": "pmc-web",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve",
-    "ionic:build-prod": "ionic-app-scripts build --release --prod  --wwwDir .publish --buildDir .publish/build",
-    "copy-to-prod": "copyup \".publish/**/*\" \"//192.168.1.8/dotnet/pmc/wwwroot/\" ",
-    "publish": "npm run ionic:build-prod && npm run copy-to-prod"
-  },
-  "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.6.0",
-    "ionicons": "3.0.0",
-    "rxjs": "5.4.0",
-    "safe-json-parse": "^4.0.0",
-    "sw-toolbox": "3.6.0",
-    "video.js": "^6.2.5",
-    "zone.js": "0.8.12"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "2.1.3",
-    "copyfiles": "^1.2.0",
-    "typescript": "2.3.4"
-  },
-  "description": "An Ionic project"
+    "name": "pmc-web",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve",
+        "ionic:build-prod": "ionic-app-scripts build --release --prod  --wwwDir .publish --buildDir .publish/build",
+        "copy-to-prod": "copyup \".publish/**/*\" \"//192.168.1.8/dotnet/pmc/wwwroot/\" ",
+        "publish": "npm run ionic:build-prod && npm run copy-to-prod"
+    },
+    "dependencies": {
+        "@angular/common": "5.0.5",
+        "@angular/compiler": "5.0.5",
+        "@angular/compiler-cli": "5.0.5",
+        "@angular/core": "5.0.5",
+        "@angular/forms": "5.0.5",
+        "@angular/http": "5.0.5",
+        "@angular/platform-browser": "5.0.5",
+        "@angular/platform-browser-dynamic": "5.0.5",
+        "@ionic-native/core": "4.4.0",
+        "@ionic-native/splash-screen": "4.4.0",
+        "@ionic-native/status-bar": "4.4.0",
+        "@ionic/storage": "2.1.3",
+        "ionic-angular": "3.9.2",
+        "ionicons": "3.0.0",
+        "ngx-http-client": "^1.0.0-beta.5",
+        "rxjs": "5.5.2",
+        "sw-toolbox": "3.6.0",
+        "video.js": "^6.8.0",
+        "zone.js": "0.8.18"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "^3.1.8",
+        "copyfiles": "^1.2.0",
+        "typescript": "2.4.2"
+    },
+    "config": {
+        "ionic_webpack": "./config/webpack.config.js"
+    },
+    "description": "An Ionic project"
 }
