--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "PlumMediaCenter",
+  "name": "plummediacenter",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4201",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
